# student-record-system

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
client/: main.cpp
common/: json.h  net_compat.h  ws_protocol.h
data/: students.csv  students_after_demo.csv
server/: csv_handler.h  logger.h  main.cpp  student.h  student_store.h  ws_server.h
tests/: INTEGRATION.md  broadcast_test.py  demo.sh  test_main.cpp
view/: index.html
